[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["VovaV101 <138198132+VovaV101@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt_toolkit = "^3.0.19"
tabulate = "^0.8.9"
pydantic = "^1.9.0"
rarfile = "^4.0"
transliterate = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
